Fixed wrapping issue for long staff member emails

--- a/AdminWebsite/AdminWebsite/ClientApp/src/app/booking/participant/item/participant-item.component.scss
+++ b/AdminWebsite/AdminWebsite/ClientApp/src/app/booking/participant/item/participant-item.component.scss
@@ -44,10 +44,7 @@
     > div:first-child {
       flex: 0 0 auto;
     }
-    .staff-member-display-name {
-      margin-left: 56px;
-    }
-    .interpreter-icon:empty {
+    .staff-member-display-name, .interpreter-icon:empty {
       margin-left: 40px;
     }
     justify-content: space-between;
